--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+libmeegotouch (0.20.6~1) unstable; urgency=low
+
+  * [UNRELEASED]
+
+ -- Daniel d'Andrada <daniel.dandrada@nokia.com>  Tue, 04 May 2010 16:37:58 +0300
+
 libmeegotouch (0.20.5-1) unstable; urgency=low
 
   * Fixes: NB#164608 - System modal dialogs do not set the _NET_WM_WINDOW_TYPE_DIALOG window hint
