--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+libmeegotouch (0.20.7~1) unstable; urgency=low
+
+  * [UNRELEASED]
+
+ -- Daniel d'Andrada <daniel.dandrada@nokia.com>  Thu, 06 May 2010 11:02:36 +0300
+
 libmeegotouch (0.20.6-1) unstable; urgency=low
 
   * Fixes: NB#166642 - dui app dump core if dbus session bus not defined
