--- a/examples/trackergrid/README
+++ b/examples/trackergrid/README
@@ -1,4 +1,4 @@
-This source example demonstrates using tracker to populate dui grid widget. 
+This source example demonstrates using tracker to populate MGridWidget. 
 
 Preconditions
 =============
