--- a/examples/layout/qgraphicsgridlayout/qgraphicsgridlayout.dox
+++ b/examples/layout/qgraphicsgridlayout/qgraphicsgridlayout.dox
@@ -3,7 +3,7 @@
 
 Source code for a simple example of QGraphicsGridLayout.
 
-\image html duigridlayoutpolicy.png
+\image html mgridlayoutpolicy.png
 
 Source code of qgraphicsgridlayout.cpp:
 \include examples/layout/qgraphicsgridlayout/qgraphicsgridlayout.cpp
