--- a/doc/src/mainpage.dox
+++ b/doc/src/mainpage.dox
@@ -57,7 +57,7 @@
       <li><a href="appletdevelopment.html">Applets</a></li>
       <li><a href="applicationextensions.html">Application extensions</a></li>
       <li><a href="appletinstallationsource.html">Applet installation sources</a></li>
-      <li><a href="prestart.html">Prestarting</a></li>
+      <li><a href="faststart.html">Fast application startup</a></li>
       <li><a href="notifications.html">Notifications</a></li>
       <li><a href="settingslanguageschema.html">Settings language reference</a></li>
       </ul>
