--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+libmeegotouch (0.20.9~1) unstable; urgency=low
+
+  * unreleased
+
+ -- Jorgen Scheibengruber <jorgen.scheibengruber@nokia.com>  Fri, 07 May 2010 17:59:02 +0300
+
 libmeegotouch (0.20.8-1) unstable; urgency=low
 
   * Fixes: NB#167131 - MTextEdit fails to emit textChanged()...
