--- a/debian/changelog
+++ b/debian/changelog
@@ -1,7 +1,7 @@
 libmeegotouch (0.20.9~1) unstable; urgency=low
 
   * unreleased
-  * Fixes: N#164283 - DuiCalendar (and therefore DuiLocale) does not support QDateTimes before start of epoch
+  * Fixes: NB#164283 - DuiCalendar (and therefore DuiLocale) does not support QDateTimes before start of epoch
 
  -- Jorgen Scheibengruber <jorgen.scheibengruber@nokia.com>  Fri, 07 May 2010 17:59:02 +0300
 
