--- a/debian/changelog
+++ b/debian/changelog
@@ -1,9 +1,11 @@
-libmeegotouch (0.20.9~1) unstable; urgency=low
+libmeegotouch (0.20.9-1) unstable; urgency=low
 
-  * unreleased
+  * Fixes: NB#167827 - List view shows redundant header list on right side of the screen.
+  * Fixes: NB#167784 - cellSize method in MAbstractCellCreator is not called when rotating device.
   * Fixes: NB#164283 - DuiCalendar (and therefore DuiLocale) does not support QDateTimes before start of epoch
+  * Implemented: SWP#-DUI-2775
 
- -- Jorgen Scheibengruber <jorgen.scheibengruber@nokia.com>  Fri, 07 May 2010 17:59:02 +0300
+ -- Jorgen Scheibengruber <jorgen.scheibengruber@nokia.com>  Mon, 10 May 2010 18:00:01 +0300
 
 libmeegotouch (0.20.8-1) unstable; urgency=low
 
