--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,7 @@
 libmeegotouch (0.20.10~1) unstable; urgency=low
 
   * unreleased
+  * Fixes: NB#167472 -  MLocale formats time "00:15" as "24:15". 24 is returned instead of 00 for "%H" format string.
 
  -- Jorgen Scheibengruber <jorgen.scheibengruber@nokia.com>  Mon, 10 May 2010 18:07:01 +0300
 
