New: Implement autoSipEnabled API for MTextEdits
RevBy: Pekka Vuorela
Details: The user can now control whether a text edit should request the
software input panel (SIP) once it gets the focus, using
[is|set]AutoSipEnabled.

--- a/doc/src/news.dox
+++ b/doc/src/news.dox
@@ -4,6 +4,11 @@
 
 \subsection New
 
+- Application developers can control the behaviour of automatic software input
+  panel (SIP) requests on the MTextEdit level:
+    - isAutoSipEnabled()
+    - setAutoSipEnabled()
+
 - MSceneManager now allows a widget to request cursor visibility directly via
  the ensureCursorVisible() slot.
 
