--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,16 @@
-libmeegotouch (0.20.11~1) unstable; urgency=low
+libmeegotouch (0.20.11-1) unstable; urgency=low
 
-  * unreleased
+  * Fixes: NB#168737 - "Fast application startup" a.k.a applauncherd does not load application.conf files
+  * Fixes: NB#165035 - m-servicefwgen generates adaptor files that say that qdbusxml2cpp generated them.
+  * Fixes: NB#164028 - DuiTextEdit does not move up after reverse rotation (clockwise)
+  * Fixes: NB#163243 - DuiTextEdit in Multi Line mode is not working properly
+  * Fixes: NB#168463 - Close button is not behaving properly after we press any other button on dialog
+  * Fixes: NB#165862 - MInfoBanner should have default disappear timeout
+  * Fixes: NB#168069 - Object menu is still showing after tapping on an item in object menu.
+  * Fixes: NB#165845 - (Video_full_screen) MVideoWidget: While in full screen the scale mode and aspect ratio do not work.
+  * Fixes: NB#156286 - duimoc doesn't work for some header files.
 
- -- Jorgen Scheibengruber <jorgen.scheibengruber@nokia.com>  Wed, 12 May 2010 10:55:42 +0300
+ -- Tomas Junnonen <tomas.junnonen@nokia.com>  Wed, 19 May 2010 14:15:00 +0300
 
 libmeegotouch (0.20.10-1) unstable; urgency=low
 
